--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
           </div>
         </a>
       </div>
-      <div style="margin-top:20px; text-align:center; font-size:12px">
+      <div style="margin-top:20px;margin-bottom:20px; text-align:center; font-size:12px">
         © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> - Creator by <a href="https://www.facebook.com/buananet.pbun">BuanaNet.Pbun</a> 
       </div>
 	  		  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9740800920365268"
