--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-     <div style="margin-top:20px;margin-bottom:20px; text-align:center; font-size:12px">
+     <div style="margin-top:20px; text-align:center; font-size:12px">
         © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> - Creator by <a href="https://www.facebook.com/buananet.pbun">BuanaNet.Pbun</a> 
       </div>
 
