--- a/index.html
+++ b/index.html
@@ -101,9 +101,158 @@
       }
       /* mouse over link */
       a:hover {
-      color: #333;
+      color: red;
       }
-
+      .resp-sharing-button__link,
+      .resp-sharing-button__icon {
+      display: inline-block
+      }
+      .resp-sharing-button__link {
+      text-decoration: none;
+      color: #ddd;
+      margin: 0.5em
+      }
+      .resp-sharing-button {
+      border-radius: 5px;
+      transition: 25ms ease-out;
+      padding: 0.5em 0.75em;
+      }
+      .resp-sharing-button__icon svg {
+      width: 1em;
+      height: 1em;
+      margin-right: 0.4em;
+      vertical-align: top
+      }
+      .resp-sharing-button--small svg {
+      margin: 0;
+      vertical-align: middle
+      }
+      /* Non solid icons get a stroke */
+      .resp-sharing-button__icon {
+      stroke: #ddd;
+      fill: none
+      }
+      /* Solid icons get a fill */
+      .resp-sharing-button__icon--solid,
+      .resp-sharing-button__icon--solidcircle {
+      fill: #ddd;
+      stroke: none
+      }
+      .resp-sharing-button--twitter {
+      background-color: #55acee
+      }
+      .resp-sharing-button--twitter:hover {
+      background-color: #2795e9
+      }
+      .resp-sharing-button--pinterest {
+      background-color: #bd081c
+      }
+      .resp-sharing-button--pinterest:hover {
+      background-color: #8c0615
+      }
+      .resp-sharing-button--facebook {
+      background-color: #3b5998
+      }
+      .resp-sharing-button--facebook:hover {
+      background-color: #2d4373
+      }
+      .resp-sharing-button--tumblr {
+      background-color: #35465C
+      }
+      .resp-sharing-button--tumblr:hover {
+      background-color: #222d3c
+      }
+      .resp-sharing-button--reddit {
+      background-color: #5f99cf
+      }
+      .resp-sharing-button--reddit:hover {
+      background-color: #3a80c1
+      }
+      .resp-sharing-button--google {
+      background-color: #dd4b39
+      }
+      .resp-sharing-button--google:hover {
+      background-color: #c23321
+      }
+      .resp-sharing-button--linkedin {
+      background-color: #0077b5
+      }
+      .resp-sharing-button--linkedin:hover {
+      background-color: #046293
+      }
+      .resp-sharing-button--email {
+      background-color: #777
+      }
+      .resp-sharing-button--email:hover {
+      background-color: #5e5e5e
+      }
+      .resp-sharing-button--xing {
+      background-color: #1a7576
+      }
+      .resp-sharing-button--xing:hover {
+      background-color: #114c4c
+      }
+      .resp-sharing-button--whatsapp {
+      background-color: #25D366
+      }
+      .resp-sharing-button--whatsapp:hover {
+      background-color: #1da851
+      }
+      .resp-sharing-button--hackernews {
+      background-color: #ff6600
+      }
+      .resp-sharing-button--hackernews:hover, .resp-sharing-button--hackernews:focus {   background-color: #FB6200 }
+      .resp-sharing-button--vk {
+      background-color: #507299
+      }
+      .resp-sharing-button--vk:hover {
+      background-color: #43648c
+      }
+      .resp-sharing-button--facebook {
+      background-color: #3b5998;
+      border-color: #3b5998;
+      }
+      .resp-sharing-button--facebook:hover,
+      .resp-sharing-button--facebook:active {
+      background-color: #2d4373;
+      border-color: #2d4373;
+      }
+      .resp-sharing-button--twitter {
+      background-color: #55acee;
+      border-color: #55acee;
+      }
+      .resp-sharing-button--twitter:hover,
+      .resp-sharing-button--twitter:active {
+      background-color: #2795e9;
+      border-color: #2795e9; 
+      }
+      .resp-sharing-button--tumblr {
+      background-color: #35465C;
+      border-color: #35465C;
+      }
+      .resp-sharing-button--tumblr:hover,
+      .resp-sharing-button--tumblr:active {
+      background-color: #222d3c;
+      border-color: #222d3c;
+      }
+      .resp-sharing-button--email {
+      background-color: #777777;
+      border-color: #777777;
+      }
+      .resp-sharing-button--email:hover,
+      .resp-sharing-button--email:active {
+      background-color: #5e5e5e;
+      border-color: #5e5e5e;
+      }
+      .resp-sharing-button--pinterest {
+      background-color: #bd081c;
+      border-color: #bd081c;
+      }
+      .resp-sharing-button--pinterest:hover,
+      .resp-sharing-button--pinterest:active {
+      background-color: #8c0615;
+      border-color: #8c0615;
+      }
       /* The Main Menu */
       .mymenu {
       margin: 0 auto;
@@ -488,10 +637,10 @@
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 <div style="width:100%; margin-top:20px"></div>
-      <div style="float:left; margin-right:5px; margin-top:10px">
+      <div style="float:left; margin-right:5px; margin-top:8px">
         <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
       </div>
-      <div style="float:left;margin-top:10px">    
+      <div style="float:left;margin-top:8px">    
         <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
       </div>
       <script async src="https://cse.google.com/cse.js?cx=751bf7c3dc13f7e72"></script>
@@ -616,23 +765,64 @@
       <p><a target="_blank"  href="https://mikbotam.net">MIKBOTAM</a> - Mikbotam is an application that makes it easy for hotspot services, because it makes it easier to generate usernames and passwords as well as easier user management with a pleasing web interface.</p>
       <p><a target="_blank"  href="https://www.radboox.com/">RadbooX</a> - RadbooX is a Radius Server Application for Mikrotik users that implements Authentication, Authorization, and Accounting (AAA) systems on PPPoE and Hotspot networks as Network Access..</p>
       <p><a target="_blank"  href="https://www.daloradius.com/">Daloradius</a> - daloRADIUS is an advanced RADIUS web platform aimed at managing Hotspots and general-purpose ISP deployments. It features rich user management, graphical reporting, accounting, and integrates with GoogleMaps for geo-locating (GIS). daloRADIUS is written in PHP and JavaScript and utilizes a database abstraction layer which means that it supports many database systems, among them the popular MySQL, PostgreSQL, Sqlite, MsSQL, and many others.</p>
-	  <br>
-	 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9740800920365268"
-     crossorigin="anonymous"></script>
-<!-- IKLAN ATAS DAN BAWAH -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-9740800920365268"
-     data-ad-slot="3628790292"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-     <div style="margin-top:20px; text-align:center; font-size:12px">
+      <br>
+      <div style="line-height:normal !important; text-align:center">
+        Share this tool with your friends<br>
+        <!-- Sharingbutton Facebook -->
+        <a class="resp-sharing-button__link" href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Fbuananetpbun.github.io%2Findex.html" target="_blank" rel="noopener" aria-label="">
+          <div class="resp-sharing-button resp-sharing-button--facebook resp-sharing-button--small">
+            <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solidcircle">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm3.6 11.5h-2.1v7h-3v-7h-2v-2h2V8.34c0-1.1.35-2.82 2.65-2.82h2.35v2.3h-1.4c-.25 0-.6.13-.6.66V9.5h2.34l-.24 2z"/>
+              </svg>
+            </div>
+          </div>
+        </a>
+        <!-- Sharingbutton Twitter -->
+        <a class="resp-sharing-button__link" href="https://twitter.com/intent/tweet/?text=MIKROTIK%20TOOLS%20By%20BUANANET%20SECURE&amp;url=https%3A%2F%2Fbuananetpbun.github.io%2Findex.html" target="_blank" rel="noopener" aria-label="">
+          <div class="resp-sharing-button resp-sharing-button--twitter resp-sharing-button--small">
+            <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solidcircle">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm5.26 9.38v.34c0 3.48-2.64 7.5-7.48 7.5-1.48 0-2.87-.44-4.03-1.2 1.37.17 2.77-.2 3.9-1.08-1.16-.02-2.13-.78-2.46-1.83.38.1.8.07 1.17-.03-1.2-.24-2.1-1.3-2.1-2.58v-.05c.35.2.75.32 1.18.33-.7-.47-1.17-1.28-1.17-2.2 0-.47.13-.92.36-1.3C7.94 8.85 9.88 9.9 12.06 10c-.04-.2-.06-.4-.06-.6 0-1.46 1.18-2.63 2.63-2.63.76 0 1.44.3 1.92.82.6-.12 1.95-.27 1.95-.27-.35.53-.72 1.66-1.24 2.04z"/>
+              </svg>
+            </div>
+          </div>
+        </a>
+        <!-- Sharingbutton Tumblr -->
+        <a class="resp-sharing-button__link" href="https://www.tumblr.com/widgets/share/tool?posttype=link&amp;title=MIKROTIK%20TOOLS%20By%20BUANANET%20SECURE&amp;caption=MIKROTIK%20TOOLS%20By%20BUANANET%20SECURE&amp;content=https%3A%2F%2Fbuananetpbun.github.io%2Findex.html&amp;canonicalUrl=https%3A%2F%2Fbuananetpbun.github.io%2Findex.html&amp;shareSource=tumblr_share_button" target="_blank" rel="noopener" aria-label="">
+          <div class="resp-sharing-button resp-sharing-button--tumblr resp-sharing-button--small">
+            <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solidcircle">
+              <svg version="1.1" x="0px" y="0px" width="24px" height="24px" viewBox="0 0 24 24" enable-background="new 0 0 24 24" xml:space="preserve">
+                <path d="M12,0C5.383,0,0,5.383,0,12s5.383,12,12,12s12-5.383,12-12S18.617,0,12,0z M15.492,17.616C11.401,19.544,9.5,17,9.5,14.031 V9.5h-2V8.142c0.549-0.178,1.236-0.435,1.627-0.768c0.393-0.334,0.707-0.733,0.943-1.2c0.238-0.467,0.401-0.954,0.49-1.675H12.5v3h2 v2h-2v3.719c0,2.468,1.484,2.692,2.992,1.701V17.616z"/>
+              </svg>
+            </div>
+          </div>
+        </a>
+        <!-- Sharingbutton E-Mail -->
+        <a class="resp-sharing-button__link" href="mailto:?subject=MIKROTIK%20TOOLS%20By%20BUANANET%20SECURE&amp;body=https%3A%2F%2Fbuananetpbun.github.io%2Findex.html" target="_self" rel="noopener" aria-label="">
+          <div class="resp-sharing-button resp-sharing-button--email resp-sharing-button--small">
+            <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solidcircle">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm8 16c0 1.1-.9 2-2 2H6c-1.1 0-2-.9-2-2V8c0-1.1.9-2 2-2h12c1.1 0 2 .9 2 2v8z"/>
+                <path d="M17.9 8.18c-.2-.2-.5-.24-.72-.07L12 12.38 6.82 8.1c-.22-.16-.53-.13-.7.08s-.15.53.06.7l3.62 2.97-3.57 2.23c-.23.14-.3.45-.15.7.1.14.25.22.42.22.1 0 .18-.02.27-.08l3.85-2.4 1.06.87c.1.04.2.1.32.1s.23-.06.32-.1l1.06-.9 3.86 2.4c.08.06.17.1.26.1.17 0 .33-.1.42-.25.15-.24.08-.55-.15-.7l-3.57-2.22 3.62-2.96c.2-.2.24-.5.07-.72z"/>
+              </svg>
+            </div>
+          </div>
+        </a>
+        <!-- Sharingbutton Pinterest -->
+        <a class="resp-sharing-button__link" href="https://pinterest.com/pin/create/button/?url=https%3A%2F%2Fbuananetpbun.github.io%2Findex.html&amp;media=https%3A%2F%2Fbuananetpbun.github.io%2Findex.html&amp;description=MIKROTIK%20TOOLS%20By%20BUANANET%20SECURE" target="_blank" rel="noopener" aria-label="">
+          <div class="resp-sharing-button resp-sharing-button--pinterest resp-sharing-button--small">
+            <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solidcircle">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm1.4 15.56c-1 0-1.94-.53-2.25-1.14l-.65 2.52c-.4 1.45-1.57 2.9-1.66 3-.06.1-.2.07-.22-.04-.02-.2-.32-2 .03-3.5l1.18-5s-.3-.6-.3-1.46c0-1.36.8-2.37 1.78-2.37.85 0 1.25.62 1.25 1.37 0 .85-.53 2.1-.8 3.27-.24.98.48 1.78 1.44 1.78 1.73 0 2.9-2.24 2.9-4.9 0-2-1.35-3.5-3.82-3.5-2.8 0-4.53 2.07-4.53 4.4 0 .5.1.9.25 1.23l-1.5.82c-.36-.64-.54-1.43-.54-2.28 0-2.6 2.2-5.74 6.57-5.74 3.5 0 5.82 2.54 5.82 5.27 0 3.6-2 6.3-4.96 6.3z"/>
+              </svg>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div style="margin-top:20px; text-align:center; font-size:12px">
         © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> - Creator by <a href="https://www.facebook.com/buananet.pbun">BuanaNet.Pbun</a> 
       </div>
-
     </div>
     <div id="myLogin" class="modal-login">
       <div style="width: 350px;" class="modal-content">
