--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       padding:0;
       margin:5px 5px 0 17px;
       display:list-item;
-      list-style: disc;
+      list-style: square;
       }
       .logo {
       color: #ddd;
@@ -601,7 +601,7 @@
         <img src="https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png">
       </div>
       <ul>
-        <li><a href="https://buananetpbun.github.io">☰ HOME</a></li>
+        <li><a href="https://buananetpbun.github.io">HOME</a></li>
         <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
         <li><a href="javascript:callmodal()">DONATE</a></li>
         <li><a target="_blank" href="https://fb.me/buananetmikrotik/">CONTACT</a></li>
