--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
         <li><a target="_blank" href="https://fb.me/buananetmikrotik/">CONTACT</a></li>
       </ul>
       <div class="show-login-menu" id="show-login-menu">
-        <button style="width:100px !important;  padding:6px; margin:4px; font-weight:bold;font-size:14px" onclick="callmodalLogin();showLogin()">Login</button>
+        <button style="width:100px !important;  padding:6px; margin:4px; font-weight:bold;font-size:14px; margin-left:10px" onclick="callmodalLogin();showLogin()">Login</button>
         <button style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px" onclick="javascript:callmodalLogin();showRegistration()">Register</button>
         <span class="text-join-now" style="font-size:13px; font-weight:normal; color:#ff6600; font-weight:bold; margin-left:10px">Only one login to access all my tools, join now, it's free!</span>
       </div>
