--- a/index.html
+++ b/index.html
@@ -624,18 +624,14 @@
       </div>
     </div>
     <div class="content">
-		  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9740800920365268"
-     crossorigin="anonymous"></script>
-<!-- IKLAN ATAS DAN BAWAH -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-9740800920365268"
-     data-ad-slot="3628790292"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+	  			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+			<!-- ads1 -->
+			<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-9740800920365268" data-ad-slot="3628790292"
+			 data-ad-format="auto" data-full-width-responsive="true"></ins>
+			<script>
+				(adsbygoogle = window.adsbygoogle || []).push({});
+			</script>
+
 <div style="width:100%; margin-top:20px"></div>
       <div style="float:left; margin-right:5px; margin-top:8px">
         <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
@@ -820,7 +816,7 @@
           </div>
         </a>
       </div>
-      <div style="margin-top:20px; text-align:center; font-size:12px">
+      <div style="margin-top:20px; text-align:center; font-size:14px">
         © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> - Creator by <a href="https://www.facebook.com/buananet.pbun">BuanaNet.Pbun</a> 
       </div>
     </div>
