--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       body {
       background: #292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat top left;
       font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
-      font-size: 16px;
+      font-size: 15px;
       line-height:normal;    
       word-wrap: break-word;
       margin:0;
@@ -49,7 +49,7 @@
       white-space: pre-wrap; /* CSS3 - Text module (Candidate Recommendation) http://www.w3.org/TR/css3-text/#white-space */
       word-wrap: break-word; /* IE 5.5+ */
       }
-      b{font-size:16px}
+      b{font-size:15px}
       p {
       padding:0;
       margin:5px 5px 0 17px;
@@ -262,7 +262,7 @@
       border-radius: 0 0 5px 5px;
       border: 2px solid #f9f9f9;
       font-weight: bold;
-      font-size: 16px;
+      font-size: 15px;
       position: relative;
       padding-left:12px;
 	  padding-right:12px;
@@ -499,7 +499,7 @@
       background: #111;
       opacity: 0.5;
       font-weight: bold;
-      font-size: 16px;
+      font-size: 15px;
       padding: 10px;
       color: #fff;
       }
@@ -673,11 +673,11 @@
       <p><a target="_blank"  href="https://buananetpbun.github.io/ecmp.html">Load Balancing ECMP Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-failover-script-generator.html">Failover Gateway Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/static-routing-games.html">Static Routing Games Generator</a> <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
-      <p><a target="_blank"  href="https://buananetpbun.github.io/policy-based-routing-website.html">Website IP Static Routing Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
+      <p><a target="_blank"  href="https://buananetpbun.github.io/policy-based-routing-website.html">Website Static Routing Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-static-routing.html">Port TCP/UDP Static Routing Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-tunnel-all-traffic-script-generator.html">All Traffic to VPN Tunnel Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
-      <p><a target="_blank"  href="https://buananetpbun.github.io/remote-ip-public-static.html">Remote IP Public for Secondary Gateway Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
-      <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-game-generator.html">VPN Routing Port Game Generator</a> <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
+      <p><a target="_blank"  href="https://buananetpbun.github.io/remote-ip-public-static.html">Remote IP Public Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
+      <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-game-generator.html">VPN Routing Port Games Generator</a> <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-game-generator2.html">VPN Routing IP Address Games Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <div style="margin-top:15px"><span style="font-size:18px;font-weight:bold">☰ SIMPLE QUEUE + QUEUE TREE + QUEUE TYPE</span></div>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-burst-limit-calculator.html">Burst Limit Calculator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
@@ -685,14 +685,14 @@
       <p><a target="_blank"  href="https://buananetpbun.github.io/simple-queue-generator.html">Simple Queue + Tocken Bucket Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/simple-queue-generator-shared.html">Simple Queue + Bandwidth Shared (UpTo) Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/queue-tree-generator-shared.html">Queue Tree + Bandwidth Shared (UpTo) Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
-      <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-generator.html">PCQ for Queue Tree And Queue Simple Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
+      <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-generator.html">PCQ for Queue Tree and Queue Simple Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <div style="margin-top:15px"><span style="font-size:18px;font-weight:bold">☰ HOTSPOT + PPPOE</span></div>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-qr-code-generator.html">Free Hotspot Wi-Fi QR Code Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-sharing-hotspot.html">Block Sharing Hotspot With Change TTL Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hotspot-wizard.html">Hotspot Wizard Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-username-password-hotspot-generator.html">Username Password Hotspot Generator</a> <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
-      <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-share-user-multi-login.html">Bandwidth Share for Hotspot Shared User Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
-      <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-expired-isolate-pppoe-hotspot.html">Notification Expired For Hotspot, PPPoE And Static IP Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
+      <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-share-user-multi-login.html">Bandwidth Share (Up-To) Hotspot User Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
+      <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-expired-isolate-pppoe-hotspot.html">Expired Notification for Hotspot, PPPoE, Static IP Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <div style="margin-top:15px"><span style="font-size:18px;font-weight:bold">☰ DNS + NAT</span></div>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-dns-over-https-doh.html">DNS over HTTPS (DoH) Servers Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-forward-generator.html">Port Forwarding Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
@@ -703,7 +703,7 @@
       <p><a target="_blank"  href="https://buananetpbun.github.io/advanced-mikrotik-protection.html">Advanced Mikrotik Router-OS Protection</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/port-knocking-icmp.html">Port Knocking with (ping) ICMP + Packet Size Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <div style="margin-top:15px"><span style="font-size:18px;font-weight:bold">☰ OTHER TOOLS</span></div>
-      <p><a target="_blank"  href="https://buananetpbun.github.io/pcc-calculation.html">LB PCC Calculation / Load Balancing PCC Calculation</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
+      <p><a target="_blank"  href="https://buananetpbun.github.io/pcc-calculation.html">Load Balancing PCC Calculation</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-netwatch-monitoring.html">Send Netwatch Monitoring To Telegram, Whatsapp, SMS, E-Mail Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-website-generator.html">Block Website Generator</a> <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/wifid-wms-seamless.html">Wifi.id WMS and Seamless Auto Login Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
@@ -871,7 +871,7 @@
           </div>
         </div>
         <div style="font-size:22px;font-weight:bold">Want to give me a Gift ?</div>
-        <div style="font-size:16px;font-weight:bold;margin-bottom:17px; margin-top:10px">
+        <div style="font-size:15px;font-weight:bold;margin-bottom:17px; margin-top:10px">
           <p><b>PayPal</b> <a style="font-size:14px;color:#ff6600;" target="_blank" href="https://paypal.me/agusramadhani1">paypal.me/agusramadhani1</a></p>
           <p><b>Saweria</b> <a style="font-size:14px;color:#ff6600;" target="_blank" href="https://saweria.co/buananetpbun">saweria.co/buananetpbun</a></p>
           <p><b>Buymeacoffee</b> <a style="font-size:14px;color:#ff6600;" target="_blank" href="https://www.buymeacoffee.com/bntpbun">buymeacoffee.com/bntpbun</a></p>
