--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
       <h3>// MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h3>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik">Complete Mikrotik RouterOS Script Database</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://router-os.github.io/">MikroTik RouterOS Search Script</a></p>
-      <h3>// MIKROTIK SCRIPT GENERATOR BY BUANANET.PBUN</h3>
+      <h3>// MIKROTIK SCRIPT GENERATOR BY BUANANETPBUN</h3>
       <span style="font-size:18px;font-weight:bold">☰ ROUTE + MANGLE</span>
       <p><a target="_blank"  href="https://buananetpbun.github.io/pcc.html">Load Balancing PCC Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/nth.html">Load Balancing NTH Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
@@ -709,7 +709,7 @@
       <p><a target="_blank"  href="https://buananetpbun.github.io/wifid-wms-seamless.html">Wifi.id WMS and Seamless Auto Login Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-backup-to-mail.html">Auto Backup To Mail Generator</a><span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mirkotik-indonesia-timezone.html">Indonesia Time Zone NTP/SNTP Clien Generator</a> <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
-      <h3>// MIKROTIK BATCH TOOLS BY BUANANET.PBUN</h3>
+      <h3>// MIKROTIK BATCH TOOLS BY BUANANETPBUN</h3>
       <p><a target="_blank"  href="https://github.com/buananetpbun/FREE-DNS-PING-TEST-DOS-BATCH">Batch: DNS Ping Test</a></p>
       <p><a target="_blank"  href="https://github.com/buananetpbun/mikrotik-port-scanner">Batch: Winbox Port Scanner</a></p>
       <p><a target="_blank"  href="https://github.com/buananetpbun/MIKROTIK-AUTO-BACKUP-FROM-BATCH">Batch: RouterOS Auto Backup</a></p>
