--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
       </div>
       <h1>MikroTik Router<span style="font-style: italic;">OS</span> Script and Tools</h1>
       <h3>// MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h3>
-      <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik">Complete Mikrotik RouterOS Script Database</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
+      <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik">Mikrotik RouterOS Script Database</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://router-os.github.io/">MikroTik RouterOS Search Script</a></p>
       <h3>// MIKROTIK SCRIPT GENERATOR BY BUANANETPBUN</h3>
       <span style="font-size:16px;font-weight:bold">☰ ROUTE + MANGLE</span>
