--- a/index.html
+++ b/index.html
@@ -683,8 +683,8 @@
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-burst-limit-calculator.html">Burst Limit Calculator</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-burst-rate-queue-size-generator.html">PCQ Burst Rate + Queue Size Calculator</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/simple-queue-generator.html">Simple Queue + Tocken Bucket Generator</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
-      <p><a target="_blank"  href="https://buananetpbun.github.io/simple-queue-generator-shared.html">Simple Queue + Bandwidth Shared (UpTo) Generator</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
-      <p><a target="_blank"  href="https://buananetpbun.github.io/queue-tree-generator-shared.html">Queue Tree + Bandwidth Shared (UpTo) Generator</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
+      <p><a target="_blank"  href="https://buananetpbun.github.io/simple-queue-generator-shared.html">Simple Queue + Bandwidth Shared (Up-To) Generator</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
+      <p><a target="_blank"  href="https://buananetpbun.github.io/queue-tree-generator-shared.html">Queue Tree + Bandwidth Shared (Up-To) Generator</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-generator.html">PCQ for Queue Tree and Queue Simple Generator</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
       <div style="margin-top:15px"><span style="font-size:16px;font-weight:bold">☰ HOTSPOT + PPPOE</span></div>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-qr-code-generator.html">Free Hotspot Wi-Fi QR Code Generator</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
@@ -699,16 +699,16 @@
       <div style="margin-top:15px"><span style="font-size:16px;font-weight:bold">☰ INTERFACE</span></div>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-bonding-interface.html">Bonding Interface / Link Aggregation Generator</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
       <div style="margin-top:15px"><span style="font-size:16px;font-weight:bold">☰ PROTECTION</span></div>
-      <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hide-my-router-from-isp.html">Mikrotik Ninja: Hide Routerboard Info From ISP / WAN Scanning Generator</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
+      <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hide-my-router-from-isp.html">Mikrotik Ninja: Hide Routerboard info From ISP / WAN Scanning Generator</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/advanced-mikrotik-protection.html">Advanced Mikrotik Router-OS Protection</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/port-knocking-icmp.html">Port Knocking with (ping) ICMP + Packet Size Generator</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
       <div style="margin-top:15px"><span style="font-size:16px;font-weight:bold">☰ OTHER TOOLS</span></div>
       <p><a target="_blank"  href="https://buananetpbun.github.io/pcc-calculation.html">Load Balancing PCC Calculation</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
-      <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-netwatch-monitoring.html">Send Netwatch Monitoring To Telegram, Whatsapp, SMS, E-Mail Generator</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
+      <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-netwatch-monitoring.html">Send Netwatch Monitoring to Telegram, Whatsapp, SMS, E-Mail Generator</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-website-generator.html">Block Website Generator</a> <span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/wifid-wms-seamless.html">Wifi.id WMS and Seamless Auto Login Generator</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
-      <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-backup-to-mail.html">Auto Backup To Mail Generator</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
-      <p><a target="_blank"  href="https://buananetpbun.github.io/mirkotik-indonesia-timezone.html">Indonesia Time Zone NTP/SNTP Clien Generator</a> <span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
+      <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-backup-to-mail.html">Auto Backup to Mail Generator</a><span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
+      <p><a target="_blank"  href="https://buananetpbun.github.io/mirkotik-indonesia-timezone.html">Indonesia Time Zone NTP/SNTP Client Generator</a> <span style="color:#333; font-weight:normal; font-size:10px"> ❌ member only</span></p>
       <h3>// MIKROTIK BATCH TOOLS BY BUANANETPBUN</h3>
       <p><a target="_blank"  href="https://github.com/buananetpbun/FREE-DNS-PING-TEST-DOS-BATCH">Batch: DNS Ping Test</a></p>
       <p><a target="_blank"  href="https://github.com/buananetpbun/mikrotik-port-scanner">Batch: Winbox Port Scanner</a></p>
