--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
 	  </div>
 	  </div>
       <h3>// MIKROTIK ROUTEROS SCRIPT GENERATOR</h3>
-      <span style="font-size:16px;font-weight:bold;">☰ ROUTE / MANGLE</span>
+      <span style="font-size:16px;font-weight:bold;">☰ ROUTE // MANGLE</span>
       <div class="row">
 	  <div class="column">
 	  <p><a target="_blank"  href="https://buananetpbun.github.io/pcc.html">Load Balancing PCC</a></p>
@@ -712,7 +712,7 @@
       <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-game-generator2.html">VPN Routing IP Address Games</a></p>
 	  </div>
 	  </div>
-      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold; ">☰ SIMPLE QUEUE / QUEUE TREE / QUEUE TYPE</span></div>
+      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold; ">☰ SIMPLE QUEUE // QUEUE TREE // QUEUE TYPE</span></div>
             <div class="row">
 	  <div class="column">
 	  <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-burst-limit-calculator.html">Burst Limit Calculator</a></p>
@@ -726,7 +726,7 @@
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-generator.html">PCQ for Queue Tree and Queue Simple</a></p>
 	  </div>
 	  </div>
-      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ HOTSPOT / PPPOE</span></div>
+      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ HOTSPOT // PPPOE</span></div>
 	              <div class="row">
 	  <div class="column">
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-qr-code-generator.html">Free Hotspot Wi-Fi QR Code</a></p>
@@ -739,7 +739,7 @@
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-expired-isolate-pppoe-hotspot.html">Expired Notification for Hotspot, PPPoE, Static IP</a></p>
 	  </div>
 	  </div>
-      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ NETWATCH / DNS / NAT / INTERFACE</span></div>
+      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ NETWATCH // DNS // NAT // INTERFACE</span></div>
 	              <div class="row">
 	  <div class="column">
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-dns-over-https-doh.html">DNS over HTTPS (DoH) Servers</a></p>
@@ -748,14 +748,14 @@
 	  </div>
 
 	  <div class="column">
-	        <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-bonding-interface.html">Bonding Interface / Link Aggregation</a></p>
+	        <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-bonding-interface.html">Bonding Interface // Link Aggregation</a></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-forward-generator.html">Port Forwarding</a></p>
 	  
 	  </div>
 	  </div>
       
 
-      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ PROTECTION / BACKUP</span></div>
+      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ PROTECTION // BACKUP</span></div>
                   <div class="row">
 	  <div class="column">
 	  <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hide-my-router-from-isp.html">Mikrotik Ninja: Hide Routerboard info from ISP</a></p>
