--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
           <p><a target="_blank"  href="http://dmasoftlab.com">DMA Radius Manager</a></p>
           <p><a target="_blank"  href="https://billingku.net">Billingku</a></p>
           <p><a target="_blank"  href="https://laksa19.github.io/">Mikhmon Billing Hotspot</a></p>
-          <p><a target="_blank"  href="https://sarang.web.id">Billing Hotspot By Sarang-Net</a></p>
+          <p><a target="_blank"  href="https://sarang.web.id">Billing Hotspot Sarang-Net</a></p>
           <p><a target="_blank"  href="https://topsetting.com">MIXRadius</a></p>
           <p><a target="_blank"  href="https://rlradius.id/">RL-Radius</a></p>
         </div>
