--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
         </div>
       </div>
       <h3>// MIKROTIK ROUTEROS SCRIPT GENERATOR</h3>
-      <span style="font-size:16px;font-weight:bold;">☰ ROUTE // MANGLE</span>
+      <span style="font-size:16px;font-weight:bold;">☰ ROUTE // MANGLE // NAT</span>
       <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/pcc.html">Load Balancing PCC</a></p>
@@ -695,6 +695,7 @@
           <p><a target="_blank"  href="https://buananetpbun.github.io/policy-based-routing-website.html">Website Static Routing</a></p>
         </div>
         <div class="column">
+          <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-forward-generator.html">Port Forwarding</a></p>		
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-static-routing.html">Port TCP/UDP Static Routing</a></p>
           <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-tunnel-all-traffic-script-generator.html">All Traffic to VPN Tunnel</a></p>
           <p><a target="_blank"  href="https://buananetpbun.github.io/remote-ip-public-static.html">Remote IP Public</a></p>
@@ -728,7 +729,7 @@
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-expired-isolate-pppoe-hotspot.html">Expired Notification for Hotspot, PPPoE, Static IP</a></p>
         </div>
       </div>
-      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ NETWATCH // DNS // NAT // INTERFACE</span></div>
+      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ DNS // NETWATCH // INTERFACE</span></div>
       <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-dns-over-https-doh.html">DNS over HTTPS (DoH) Servers</a></p>
@@ -736,7 +737,6 @@
         </div>
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-bonding-interface.html">Bonding Interface // Link Aggregation</a></p>
-          <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-forward-generator.html">Port Forwarding</a></p>
         </div>
       </div>
       <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ PROTECTION // BACKUP</span></div>
